--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,3 +120,36 @@ h1 {
     padding: 10px;
     color: red;
 }
+
+
+@media (max-width: 1000px){
+.playerChoice{
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 20px;
+    gap: 10px;
+}
+#gameContainer{
+    display: flex;
+    flex-direction: column;
+}
+#tabContainer{
+    width: 90%;
+    margin: auto;
+}
+#retry{
+    width: 80%;
+    margin: auto;
+    font-size: 20px;
+}
+#retryScore{
+    font-size: 20px;
+    margin: auto;
+}
+#score{
+    text-align: center;
+}
+#winText{
+    font-size: 20px;
+}
+}
